--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.0.0",
+        "classnames": "^2.2.6",
         "memoize-one": "^4.0.2",
         "react-window": "^1.2.4"
     },
@@ -66,7 +67,6 @@
         "react-dom": "^15.0.0 || ^16.0.0"
     },
     "devDependencies": {
-        "react-json-tree": "^0.11.0",
         "@avinlab/react-size-me": "^1.1.5",
         "@babel/core": "^7.0.0",
         "@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -93,6 +93,7 @@
         "prop-types": "^15.6.2",
         "react": "^16.5.1",
         "react-dom": "^16.5.1",
+        "react-json-tree": "^0.11.0",
         "react-scripts": "^1.1.1",
         "react-test-renderer": "^16.4.0",
         "rimraf": "^2.6.2",
