--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-vt-tree",
-    "version": "0.0.0",
+    "version": "0.0.1",
     "description": "...",
     "author": "Avin Grape <carcinogen75@gmail.com> (https://github.com/avin/)",
     "contributors": [
@@ -74,6 +74,9 @@
         "@babel/preset-env": "^7.0.0",
         "@babel/preset-flow": "^7.0.0",
         "@babel/preset-react": "^7.0.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.8",
+        "@fortawesome/free-solid-svg-icons": "^5.5.0",
+        "@fortawesome/react-fontawesome": "^0.1.3",
         "@storybook/addon-actions": "^4.0.2",
         "@storybook/addon-links": "^4.0.2",
         "@storybook/addons": "^4.0.2",
@@ -89,6 +92,7 @@
         "flow-bin": "^0.80.0",
         "gh-pages": "^1.1.0",
         "lint-staged": "^7.0.5",
+        "node-sass": "^4.10.0",
         "prettier": "^1.12.1",
         "prop-types": "^15.6.2",
         "react": "^16.5.1",
@@ -100,6 +104,7 @@
         "rollup": "^0.65.0",
         "rollup-plugin-babel": "^4.0.2",
         "rollup-plugin-commonjs": "^8.2.1",
-        "rollup-plugin-node-resolve": "^3.0.2"
+        "rollup-plugin-node-resolve": "^3.0.2",
+        "sass-loader": "^7.1.0"
     }
 }
