--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "0.1.0",
     "description": "...",
     "author": "Avin Grape <carcinogen75@gmail.com> (https://github.com/avin/)",
-    "contributors": ["Avin Grape <carcinogen75@gmail.com> (https://github.com/avin/)"],
+    "contributors": [
+        "Avin Grape <carcinogen75@gmail.com> (https://github.com/avin/)"
+    ],
     "license": "MIT",
     "homepage": "https://github.com/avin/react-vt-tree",
     "repository": {
@@ -16,9 +18,18 @@
     "engines": {
         "node": ">8.0.0"
     },
-    "keywords": ["react", "reactjs", "tree", "virtualized"],
+    "keywords": [
+        "react",
+        "reactjs",
+        "tree",
+        "virtualized"
+    ],
     "module": "dist/index.esm.js",
-    "files": ["dist", "src/*.js", "README.adoc"],
+    "files": [
+        "dist",
+        "src/*.js",
+        "README.adoc"
+    ],
     "scripts": {
         "build": "rimraf dist && mkdir dist && yarn build:flow && yarn build:source",
         "build:demo": "build-storybook -o demo",
@@ -38,7 +49,10 @@
         "test:watch": "react-scripts test --env=jsdom"
     },
     "lint-staged": {
-        "{website,src}/**/*.{js,json,css}": ["prettier --write", "git add"],
+        "{website,src}/**/*.{js,json,css}": [
+            "prettier --write",
+            "git add"
+        ],
         "**/*.js": "eslint --max-warnings 0"
     },
     "dependencies": {
@@ -52,8 +66,6 @@
         "react-dom": "^15.0.0 || ^16.0.0"
     },
     "devDependencies": {
-        "babel-plugin-flow-react-proptypes": "^24.1.2",
-        "rollup-plugin-copy": "^0.2.3",
         "@avinlab/react-size-me": "^1.1.5",
         "@babel/core": "^7.0.0",
         "@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -70,31 +82,35 @@
         "@storybook/react": "^4.0.2",
         "babel-core": "^7.0.0-bridge.0",
         "babel-loader": "^8.0.4",
-        "babel-plugin-annotate-pure-calls": "^0.3.0",
+        "babel-plugin-annotate-pure-calls": "^0.4.0",
+        "babel-plugin-flow-react-proptypes": "^24.1.2",
         "cpr": "^3.0.1",
         "cross-env": "^5.1.4",
         "enzyme": "^3.7.0",
-        "enzyme-adapter-react-16": "^1.6.0",
+        "enzyme-adapter-react-16": "^1.7.0",
         "eslint-config-prettier": "^3.1.0",
-        "flow-bin": "^0.85.0",
-        "gh-pages": "^1.1.0",
+        "flow-bin": "^0.86.0",
+        "gh-pages": "^2.0.1",
         "immutable": "^4.0.0-rc.12",
-        "lint-staged": "^7.0.5",
-        "node-sass": "^4.10.0",
+        "jest-environment-enzyme": "^7.0.1",
+        "jest-enzyme": "^7.0.1",
+        "lint-staged": "^8.0.4",
         "prettier": "^1.12.1",
         "prop-types": "^15.6.2",
         "react": "^16.5.1",
         "react-dom": "^16.5.1",
         "react-json-tree": "^0.11.0",
-        "react-scripts": "^1.1.1",
+        "react-scripts": "^2.1.1",
         "react-test-renderer": "^16.4.0",
         "rimraf": "^2.6.2",
-        "rollup": "^0.65.0",
+        "rollup": "^0.67.0",
         "rollup-plugin-babel": "^4.0.2",
-        "rollup-plugin-commonjs": "^8.2.1",
+        "rollup-plugin-commonjs": "^9.2.0",
+        "rollup-plugin-copy": "^0.2.3",
         "rollup-plugin-node-resolve": "^3.0.2",
         "rollup-plugin-peer-deps-external": "^2.2.0",
         "rollup-plugin-size-snapshot": "^0.7.0",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "sinon": "^7.1.1"
     }
 }
