--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-vt-tree",
-    "version": "0.1.2",
+    "version": "0.2.0",
     "description": "...",
     "author": "Avin Grape <carcinogen75@gmail.com> (https://github.com/avin/)",
     "contributors": [
@@ -22,7 +22,8 @@
         "react",
         "reactjs",
         "tree",
-        "virtualized"
+        "virtualized",
+        "nodes"
     ],
     "module": "dist/index.esm.js",
     "files": [
