--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "name": "react-vt-tree",
-    "version": "0.2.5",
+    "version": "0.2.6",
     "description": "...",
     "author": "Avin Grape <carcinogen75@gmail.com> (https://github.com/avin/)",
-    "contributors": ["Avin Grape <carcinogen75@gmail.com> (https://github.com/avin/)"],
+    "contributors": [
+        "Avin Grape <carcinogen75@gmail.com> (https://github.com/avin/)"
+    ],
     "license": "MIT",
     "homepage": "https://github.com/avin/react-vt-tree",
     "repository": {
@@ -16,10 +18,20 @@
     "engines": {
         "node": ">8.0.0"
     },
-    "keywords": ["react", "reactjs", "tree", "virtualized", "nodes"],
+    "keywords": [
+        "react",
+        "reactjs",
+        "tree",
+        "virtualized",
+        "nodes"
+    ],
     "main": "dist/index.cjs.js",
     "module": "dist/index.esm.js",
-    "files": ["dist", "src/*.js", "README.adoc"],
+    "files": [
+        "dist",
+        "src/*.js",
+        "README.adoc"
+    ],
     "scripts": {
         "build": "rimraf dist && mkdir dist && yarn build:flow && yarn build:source",
         "build:demo": "build-storybook -o demo",
@@ -44,7 +56,10 @@
         }
     },
     "lint-staged": {
-        "{website,src}/**/*.{js,json,css}": ["prettier --write", "git add"],
+        "{website,src}/**/*.{js,json,css}": [
+            "prettier --write",
+            "git add"
+        ],
         "**/*.js": "eslint --max-warnings 0"
     },
     "dependencies": {
@@ -101,7 +116,6 @@
         "rollup-plugin-commonjs": "^9.2.0",
         "rollup-plugin-copy": "^0.2.3",
         "rollup-plugin-node-resolve": "^3.0.2",
-        "rollup-plugin-peer-deps-external": "^2.2.0",
         "rollup-plugin-size-snapshot": "^0.7.0",
         "sass-loader": "^7.1.0",
         "sinon": "^7.1.1"
